[package]
name = "web2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
websocket = "0.27"
#serde = "1.0"
serde_json = "1.0"
futures = "0.3"
# [dependencies]
serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.17"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17.0"
ed25519-dalek = "2.0.0"
rand = "0.8"
rand_chacha = "0.3.0"
rsa = "0.3.0"

clap = "2.34.0"


